--- a/first project/index.html
+++ b/first project/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav style="">
+    <nav style="display: none;">
         <div class="logo-content">
             <div class="logo">
                 <i class="bx bx-store"></i>
@@ -84,6 +84,25 @@
             <div class="card-content">
                 <h1>PEPSI COLA</h1>
                 <p>Pepsi is a carbonated soft drink manufactured by PepsiCo. Originally created and developed in 1893 by Caleb Bradham and introduced as Brad's Drink, it was renamed as Pepsi-Cola in 1898, and then shortened to Pepsi in 1961.</p>
+                <a href="#">Bay Now</a>
+            </div>
+        </div>
+         <div class="card">
+            <div class="circle"></div>
+            <img src="Orange.png">
+            <div class="card-content">
+                <h1>ORANGE JUICE</h1>
+                <p>Orange juice is a liquid extract of the orange tree fruit, produced by squeezing or reaming oranges. It comes in several different varieties, including blood orange, navel oranges, valencia orange, clementine, and tangerine.</p>
+                <a href="#">Bay Now</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="circle"></div>
+            <img src="Mario.png">
+            <div class="card-content">
+                <h1>SUPER MARIO</h1>
+                <p>Super Mario is a platform game series created by Nintendo based on Mario. Alternatively called the Super Mario Bros. series or simply the Mario series, it is the central series of the greater Mario franchise. At least one Super Mario game
+                    has been released for every major Nintendo video game console.</p>
                 <a href="#">Bay Now</a>
             </div>
         </div>
